<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbot_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 robot bringup package for Makeblock mbot</description>
  <maintainer email="jtkornel@yahoo.no">Jan Tore Korneliussen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mbot_description</exec_depend>

  <exec_depend>controller_manager</exec_depend>

  <exec_depend>forward_command_controller</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
